# auto-upload

./: .gitignore  .gitmodules  CLAUDE.md  README.md
.claude/: settings.local.json
backend/: app.py  conf.py  init_db.py  requirements.txt  test_account_routes.py  test_data_dir.py  test_heybox_platform.py  test_login_dispatcher.py
backend/ext_api/: __init__.py  task_queue.py
backend/impl/: _browser.py  registry.py
backend/impl/bilibili/: uploader.py
backend/impl/douyin/: uploader.py
backend/impl/heybox/: __init__.py  platform.py
backend/impl/kuaishou/: uploader.py
backend/impl/youtube/: uploader.py
changelog/: 20260520.html
data/: settings.json
docs/superpowers/plans/: 2026-05-08-ui-redesign.md  2026-05-11-tauri-desktop-bundle-implementation.md  2026-05-15-new-platforms-plan.md
docs/superpowers/specs/: 2026-05-08-ui-redesign-design.md  2026-05-09-publish-center-redesign.md  2026-05-11-tauri-desktop-bundle-design.md  2026-05-15-new-platforms-design.md
frontend/: vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: material.js  v2.js
frontend/src/config/: platforms.js
frontend/src/router/: index.js
frontend/src/stores/: account.js
frontend/src/styles/: design-system.scss  index.scss  reset.scss  variables.scss
frontend/src/utils/: api-runtime.js  request.js
frontend/src/views/: About.vue  AccountManagement.vue  Author.vue  Dashboard.vue  MaterialManagement.vue  Settings.vue  (+3 more)
frontend/tests/: api-runtime.test.mjs
scripts/: build-installer.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+15 files in other folders)
